ebnf.txt
program     = function*
global      = declare ("=" assign)? ";" | function
function    = type ident "(" (declare (, declare)*)? ")" (stmt | ";")
stmt        = expr ";"
              | "{" stmt* "}"
              | "return" expr ";"
              | "if" "(" expr ")" stmt ("else" stmt)?
              | "while" "(" expr ")" stmt
              | "for" "(" expr? ";" expr? ";" expr? ")" stmt
              | declare ("=" assign)? ";"
declare     = type ident
expr        = assign
assign      = equality ("=" assign)?
equality    = relational ("==" relational | "!=" relational)*
relational  = add ("<" add | "<=" add | ">" add | ">=" add)*
add         = mul ("+" mul | "-" mul)*
mul         = unary ("*" unary | "/" unary)*
unary       = "sizeof" unary
              | ("+" | "-")? primary
              | ("*" | "&") unary
primary     = num
             | string
             | ident ("(" (expr (, expr)*)? ")")?
             | "(" expr ")"
